@@ -2,6 +2,7 @@
 ===============
 
 - Removed all old sqlite code.
+- Remove client id limit in clients.
 
 0.10 - 20110429
 ===============
